--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,13 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+
+# Text backup files
+*.bak
+
+# Database
+*.sqlite3
+
 # Flask stuff:
 instance/
 .webassets-cache
